update references to journaling

--- a/apps.html
+++ b/apps.html
@@ -100,11 +100,11 @@ title: Apps
           <span class="glyphicon glyphicon-chevron-right"></span>
         </a>
       </div>
-      <p style="margin-top:15px;">A journaling app that helps you capture memories and reflect on your life, season by season.</p>
+      <p style="margin-top:15px;">A memory board game where you flip tiles to match the correct ones, season by season.</p>
       <ul class="text-left" style="display:inline-block;">
-        <li>Easy seasonal journaling</li>
-        <li>Photo and note support</li>
-        <li>Reminders to reflect</li>
+        <li>Easy seasonal tile matching</li>
+        <li>Seasonal themes and scoring</li>
+        <li>Score tracking</li>
       </ul>
       <div style="margin:10px 0;">
         <a href="https://apps.apple.com/" class="btn btn-default" style="margin-right:10px;"><i class="fa fa-apple"></i> App Store</a>
