--- a/contact.html
+++ b/contact.html
@@ -21,11 +21,11 @@ title: Apps
     <div class="col-md-6 text-center">
       <img src="img/portfolio/1.jpg" class="img-responsive" alt="Memory by Seasons screenshot" style="margin:0 auto;max-width:300px;">
       <h2>Memory by Seasons</h2>
-      <p>A journaling app that helps you capture memories and reflect on your life, season by season.</p>
+      <p>A memory board game where you flip tiles to match the correct ones, season by season.</p>
       <ul class="text-left" style="display:inline-block;">
-        <li>Easy seasonal journaling</li>
-        <li>Photo and note support</li>
-        <li>Reminders to reflect</li>
+        <li>Easy seasonal tile matching</li>
+        <li>Seasonal themes and scoring</li>
+        <li>Score tracking</li>
       </ul>
       <div style="margin:10px 0;">
         <a href="https://apps.apple.com/" class="btn btn-default" style="margin-right:10px;"><i class="fa fa-apple"></i> App Store</a>
