--- a/apps.html
+++ b/apps.html
@@ -107,7 +107,7 @@ title: Apps
         <li>Score tracking</li>
       </ul>
       <div style="margin:10px 0;">
-        <a href="https://apps.apple.com/" class="btn btn-default" style="margin-right:10px;"><i class="fa fa-apple"></i> App Store</a>
+        <a href="https://apps.apple.com/us/app/memory-by-seasons/id6753765713" class="btn btn-default" style="margin-right:10px;"><i class="fa fa-apple"></i> App Store</a>
         <a href="https://play.google.com/store" class="btn btn-default"><i class="fa fa-android"></i> Google Play</a>
       </div>
     </div>
@@ -196,6 +196,70 @@ title: Apps
       <div style="margin:10px 0;">
         <a href="https://apps.apple.com/" class="btn btn-default" style="margin-right:10px;"><i class="fa fa-apple"></i> App Store</a>
         <a href="https://play.google.com/store" class="btn btn-default"><i class="fa fa-android"></i> Google Play</a>
+      </div>
+    </div>
+  </div>
+  <div class="row" style="margin-top:40px;">
+    <!-- Fun with Crosswords -->
+    <div class="col-md-6 text-center">
+      <h2>Fun with Crosswords</h2>
+      <div id="carouselCrosswords" class="carousel slide" data-ride="carousel">
+        <ol class="carousel-indicators">
+          <li data-target="#carouselCrosswords" data-slide-to="0" class="active"></li>
+          <li data-target="#carouselCrosswords" data-slide-to="1"></li>
+          <li data-target="#carouselCrosswords" data-slide-to="2"></li>
+          <li data-target="#carouselCrosswords" data-slide-to="3"></li>
+          <li data-target="#carouselCrosswords" data-slide-to="4"></li>
+          <li data-target="#carouselCrosswords" data-slide-to="5"></li>
+          <li data-target="#carouselCrosswords" data-slide-to="6"></li>
+          <li data-target="#carouselCrosswords" data-slide-to="7"></li>
+          <li data-target="#carouselCrosswords" data-slide-to="8"></li>
+        </ol>
+        <div class="carousel-inner">
+          <div class="item active">
+            <img src="img/portfolio/fun-with-crosswords/Simulator Screenshot - iPhone Air - 2025-11-16 at 23.38.30.png" alt="Fun with Crosswords screenshot 1" style="width:50%;margin:0 auto;display:block;">
+          </div>
+          <div class="item">
+            <img src="img/portfolio/fun-with-crosswords/Simulator Screenshot - iPhone Air - 2025-11-16 at 23.38.35.png" alt="Fun with Crosswords screenshot 2" style="width:50%;margin:0 auto;display:block;">
+          </div>
+          <div class="item">
+            <img src="img/portfolio/fun-with-crosswords/Simulator Screenshot - iPhone Air - 2025-11-16 at 23.38.41.png" alt="Fun with Crosswords screenshot 3" style="width:50%;margin:0 auto;display:block;">
+          </div>
+          <div class="item">
+            <img src="img/portfolio/fun-with-crosswords/Simulator Screenshot - iPhone Air - 2025-11-16 at 23.38.47.png" alt="Fun with Crosswords screenshot 4" style="width:50%;margin:0 auto;display:block;">
+          </div>
+          <div class="item">
+            <img src="img/portfolio/fun-with-crosswords/Simulator Screenshot - iPhone Air - 2025-11-16 at 23.38.52.png" alt="Fun with Crosswords screenshot 5" style="width:50%;margin:0 auto;display:block;">
+          </div>
+          <div class="item">
+            <img src="img/portfolio/fun-with-crosswords/Simulator Screenshot - iPhone Air - 2025-11-16 at 23.39.03.png" alt="Fun with Crosswords screenshot 6" style="width:50%;margin:0 auto;display:block;">
+          </div>
+          <div class="item">
+            <img src="img/portfolio/fun-with-crosswords/Simulator Screenshot - iPhone Air - 2025-11-16 at 23.39.10.png" alt="Fun with Crosswords screenshot 7" style="width:50%;margin:0 auto;display:block;">
+          </div>
+          <div class="item">
+            <img src="img/portfolio/fun-with-crosswords/Simulator Screenshot - iPhone Air - 2025-11-16 at 23.39.15.png" alt="Fun with Crosswords screenshot 8" style="width:50%;margin:0 auto;display:block;">
+          </div>
+          <div class="item">
+            <img src="img/portfolio/fun-with-crosswords/Simulator Screenshot - iPhone Air - 2025-11-16 at 23.39.20.png" alt="Fun with Crosswords screenshot 9" style="width:50%;margin:0 auto;display:block;">
+          </div>
+        </div>
+        <a class="left carousel-control" href="#carouselCrosswords" data-slide="prev">
+          <span class="glyphicon glyphicon-chevron-left"></span>
+        </a>
+        <a class="right carousel-control" href="#carouselCrosswords" data-slide="next">
+          <span class="glyphicon glyphicon-chevron-right"></span>
+        </a>
+      </div>
+      <p style="margin-top:15px;">Challenge your mind with engaging crossword puzzles for all skill levels.</p>
+      <ul class="text-left" style="display:inline-block;">
+        <li>Multiple difficulty levels</li>
+        <li>Daily puzzle challenges</li>
+        <li>Progress tracking</li>
+        <li>Hints and clue assistance</li>
+      </ul>
+      <div style="margin:10px 0;">
+        <a href="https://apps.apple.com/us/app/fun-with-crosswords/id1393761969" class="btn btn-default"><i class="fa fa-apple"></i> App Store</a>
       </div>
     </div>
   </div>
