--- a/contact.html
+++ b/contact.html
@@ -2,50 +2,142 @@
 layout: front
 title: Contact
 ---
-<section class="container" style="margin-top:40px;">
-  <h1 class="text-center">Contact Mellowmint</h1>
-  <div class="row" style="margin-top:30px;">
-    <div class="col-md-6 col-md-offset-3 text-center">
-      <p>Email us at <a href="mailto:mellowmint.app@gmail.com">mellowmint.app@gmail.com</a></p>
-      <p>Follow us on <a href="https://twitter.com/mellowmintapp">Twitter</a> and <a href="https://github.com/mellowmintapp">GitHub</a></p>
-    </div>
-  </div>
-</section>
----
-layout: front
-title: Apps
----
-<section class="container" style="margin-top:40px;">
-  <h1 class="text-center">Our Apps</h1>
-  <div class="row" style="margin-top:30px;">
-    <div class="col-md-6 text-center">
-      <img src="img/portfolio/1.jpg" class="img-responsive" alt="Memory by Seasons screenshot" style="margin:0 auto;max-width:300px;">
-      <h2>Memory by Seasons</h2>
-      <p>A memory board game where you flip tiles to match the correct ones, season by season.</p>
-      <ul class="text-left" style="display:inline-block;">
-        <li>Easy seasonal tile matching</li>
-        <li>Seasonal themes and scoring</li>
-        <li>Score tracking</li>
-      </ul>
-      <div style="margin:10px 0;">
-        <a href="https://apps.apple.com/" class="btn btn-default" style="margin-right:10px;"><i class="fa fa-apple"></i> App Store</a>
-        <a href="https://play.google.com/store" class="btn btn-default"><i class="fa fa-android"></i> Google Play</a>
-      </div>
-    </div>
-    <div class="col-md-6 text-center">
-      <img src="img/portfolio/2.jpg" class="img-responsive" alt="Closet Flow screenshot" style="margin:0 auto;max-width:300px;">
-      <h2>Closet Flow</h2>
-      <p>Organize your wardrobe, plan outfits, and simplify your mornings with Closet Flow.</p>
-      <ul class="text-left" style="display:inline-block;">
-        <li>Wardrobe cataloging</li>
-        <li>Outfit planning calendar</li>
-        <li>Style inspiration feed</li>
-      </ul>
-      <div style="margin:10px 0;">
-        <a href="https://apps.apple.com/" class="btn btn-default" style="margin-right:10px;"><i class="fa fa-apple"></i> App Store</a>
-        <a href="https://play.google.com/store" class="btn btn-default"><i class="fa fa-android"></i> Google Play</a>
-      </div>
-    </div>
-  </div>
-</section>
 
+<style>
+  /* Hero */
+  .contact-hero {
+    background: linear-gradient(135deg, #F05F40 0%, #e8491d 100%);
+    color: #fff;
+    padding: 110px 0 90px; /* increased bottom spacing */
+    text-align: center;
+    position: relative; /* enable overlay */
+    overflow: hidden;
+  }
+  .contact-hero::before {
+    content: "";
+    position: absolute;
+    inset: 0;
+    background: linear-gradient(135deg, rgba(0,0,0,0.18) 0%, rgba(0,0,0,0.12) 100%); /* subtle dark overlay for contrast */
+    pointer-events: none;
+  }
+  .contact-hero .container {
+    position: relative;
+    z-index: 1; /* sit above overlay */
+  }
+  .contact-hero h1 {
+    font-family: 'Fredoka', sans-serif;
+    font-size: 3em;
+    font-weight: 700;
+    margin: 0 0 10px;
+    color: #ffffff;
+    text-shadow: 2px 2px 6px rgba(0,0,0,0.35);
+  }
+  .contact-hero p {
+    font-size: 1.2em;
+    opacity: 0.98;
+    color: #ffffff;
+    text-shadow: 1px 1px 3px rgba(0,0,0,0.3);
+    margin: 0;
+  }
+
+  /* Card */
+  .contact-card {
+    background: #fff;
+    border-radius: 20px;
+    box-shadow: 0 12px 40px rgba(0,0,0,0.1);
+    padding: 30px;
+    max-width: 700px;
+    margin: 20px auto 60px; /* removed negative margin to avoid overlap */
+    text-align: center;
+  }
+  .contact-card .method {
+    display: flex;
+    align-items: center;
+    gap: 14px;
+    justify-content: center;
+    margin: 14px 0;
+    font-size: 1.05em;
+  }
+  .contact-card .method i {
+    color: #F05F40;
+    font-size: 1.4em;
+  }
+  .contact-card a {
+    color: #F05F40;
+    font-weight: 600;
+    text-decoration: none;
+  }
+  .contact-card a:hover {
+    text-decoration: underline;
+  }
+
+  /* CTA */
+  .contact-cta {
+    text-align: center;
+    margin: 10px 0 0;
+    color: #4a5568;
+  }
+
+  /* Buttons */
+  .btn-primary-gradient {
+    background: linear-gradient(135deg, #F05F40 0%, #e8491d 100%);
+    color: #fff !important;
+    border: none;
+    border-radius: 25px;
+    padding: 10px 22px;
+    font-weight: 600;
+    display: inline-block;
+    transition: transform 0.2s ease, box-shadow 0.2s ease;
+  }
+  .btn-primary-gradient:hover {
+    transform: translateY(-2px);
+    box-shadow: 0 8px 20px rgba(240,95,64,0.35);
+    color: #fff !important;
+    text-decoration: none;
+  }
+
+  @media (max-width: 768px) {
+    .contact-hero h1 { font-size: 2.2em; }
+    .contact-card { margin: 16px 16px 50px; }
+  }
+</style>
+
+<header class="contact-hero" aria-label="Contact Mellowmint">
+  <div class="container">
+    <h1>Contact Mellowmint</h1>
+    <p>We'd love to hear from you</p>
+  </div>
+</header>
+
+<section class="container" aria-labelledby="contact-title">
+  <div class="contact-card">
+    <h2 id="contact-title" class="sr-only">Contact Methods</h2>
+
+    <div class="method">
+      <i class="fa fa-envelope" aria-hidden="true"></i>
+      <span>Email us at
+        <a href="mailto:mellowmint.app@gmail.com" aria-label="Email Mellowmint">mellowmint.app@gmail.com</a>
+      </span>
+    </div>
+
+    <div class="method">
+      <i class="fa fa-twitter" aria-hidden="true"></i>
+      <span>Follow us on
+        <a href="https://twitter.com/mellowmintapp" target="_blank" rel="noopener" aria-label="Mellowmint on Twitter">Twitter</a>
+      </span>
+    </div>
+
+    <div class="method">
+      <i class="fa fa-github" aria-hidden="true"></i>
+      <span>Explore our code on
+        <a href="https://github.com/mellowmintapp" target="_blank" rel="noopener" aria-label="Mellowmint on GitHub">GitHub</a>
+      </span>
+    </div>
+
+    <div style="margin-top:20px;">
+      <a href="/apps.html" class="btn-primary-gradient" aria-label="View our apps">View Our Apps</a>
+    </div>
+
+    <p class="contact-cta">Prefer social DMs? Reach out on Twitter—responses within 24–48 hours.</p>
+  </div>
+</section>
